# fresh

./: Cargo.toml  README.md
examples/: Cargo.toml  hello_world.rs
fresh/: Cargo.toml
fresh-macros/: Cargo.toml
fresh-macros/src/: attr.rs  expand.rs  lib.rs  method.rs  param.rs  parser.rs  util.rs
fresh-macros/src/expand/: fresh.rs  method.rs
fresh-macros/src/http/: method.rs
fresh-macros/src/parser/: fresh_attribute.rs
fresh-test/: Cargo.toml
fresh-test/src/: lib.rs  macros.rs
fresh-test/tests/: macros_test.rs
fresh/src/: client.rs  codec.rs  error.rs  lib.rs  prelude.rs
waygate/: Cargo.toml
waygate-macros/: Cargo.toml
waygate-macros/src/: expand.rs  lib.rs  parser.rs
waygate-macros/src/expand/: request.rs
waygate-macros/src/http/: method.rs
waygate-macros/src/parser/: request.rs
waygate-test/: Cargo.toml
waygate-test/src/: macros.rs
waygate-test/tests/: macros_test.rs
waygate/src/: client.rs  lib.rs
