[package]
name = "waygate-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for the Waygate HTTP client."
authors.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
proc-macro2.workspace = true
quote.workspace = true
derive_builder.workspace = true