[package]
name = "waygate"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
reqwest.workspace = true
serde_json.workspace = true
url.workspace = true
derive_builder.workspace = true

# feature-dependent dependencies
waygate-macros = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["macros"]
macros = ["dep:waygate-macros"]
log = ["tracing"]